create general tikcet api added

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.starter">
     <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="starter"
+        android:label="Service Desk"
         android:icon="@mipmap/ic_launcher">
          
         <activity
