--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,61 +2,105 @@ name: starter
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment:
+environment: 
   sdk: '>=2.12.0 <3.0.0'
 
-dependencies:
+dependencies: 
   cached_network_image: ^3.2.0
   cupertino_icons: ^1.0.4
   dio: ^4.0.4
   firebase_auth: 3.3.5
   firebase_core: 1.11.0
-  flutter:
-    sdk: flutter
   get: ^4.6.1
   get_storage: ^2.0.3
   google_sign_in: 5.2.1
   shimmer: ^2.0.0
   timeago: ^3.1.0
-
-dev_dependencies:
-  flutter_test:
+  flutter_svg: 1.0.2
+  flutter: 
     sdk: flutter
 
+dev_dependencies: 
+  flutter_test: 
+    sdk: flutter
+
+
 flutter:
-  assets:
-    - assets/images/google_logo.png
+  uses-material-design: true
+
+  assets: 
+    - assets/images/
+
   fonts:
     - family: opensans
       fonts:
         - asset: assets/fonts/OpenSans-Light.ttf
           weight: 300
         - asset: assets/fonts/OpenSans-LightItalic.ttf
-          style: italic
           weight: 300
+          style: italic
         - asset: assets/fonts/OpenSans-Regular.ttf
           weight: 400
-        - asset: assets/fonts/OpenSans-Italic.ttf
-          style: italic
+        - asset: assets/fonts/OpenSans-LightItalic.ttf
           weight: 400
+          style: italic
         - asset: assets/fonts/OpenSans-Medium.ttf
           weight: 500
         - asset: assets/fonts/OpenSans-MediumItalic.ttf
-          style: italic
           weight: 500
+          style: italic
         - asset: assets/fonts/OpenSans-SemiBold.ttf
           weight: 600
         - asset: assets/fonts/OpenSans-SemiBoldItalic.ttf
-          style: italic
           weight: 600
-        - asset: assets/fonts/OpenSans-Bold.ttf
+          style: italic
+        - asset: assets/fonts//OpenSans-Bold.ttf
           weight: 700
         - asset: assets/fonts/OpenSans-BoldItalic.ttf
-          style: italic
           weight: 700
+          style: italic
         - asset: assets/fonts/OpenSans-ExtraBold.ttf
           weight: 800
         - asset: assets/fonts/OpenSans-BoldItalic.ttf
-          style: italic
           weight: 800
-  uses-material-design: true
+          style: italic
+
+# flutter: 
+#   uses-material-design: true
+#   assets: 
+#     - assets/images/
+#   fonts: 
+#     - family: opensans
+#       fonts: 
+#         - asset: assets/fonts/OpenSans-Light.ttf
+# weight: 300
+#         - asset: assets/fonts/OpenSans-LightItalic.ttf
+# style: italic
+# weight: 300
+#         - asset: assets/fonts/OpenSans-Regular.ttf
+# weight: 400
+#         - asset: assets/fonts/OpenSans-LightItalic.ttf
+# style: italic
+# weight: 400
+#         - asset: assets/fonts/OpenSans-Medium.ttf
+# weight: 500
+#         - asset: assets/fonts/OpenSans-MediumItalic.ttf
+# style: italic
+# weight: 500
+#         - asset: assets/fonts/OpenSans-SemiBold.ttf
+# weight: 600
+#         - asset: assets/fonts/OpenSans-SemiBoldItalic.ttf
+# style: italic
+# weight: 600
+#         - asset: assets/fonts/OpenSans-Bold.ttf
+# weight: 700
+#         - asset: assets/fonts/OpenSans-BoldItalic.ttf
+# style: italic
+# weight: 700
+#         - asset: assets/fonts/OpenSans-ExtraBold.ttf
+# weight: 800
+#         - asset: assets/fonts/OpenSans-BoldItalic.ttf
+# style: italic
+# weight: 800
+  
+
