--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   shimmer: ^2.0.0
   timeago: ^3.1.0
   flutter_svg: 1.0.2
+  flutter_spinkit: 5.1.0
   flutter: 
     sdk: flutter
 
@@ -24,83 +25,41 @@ dev_dependencies:
   flutter_test: 
     sdk: flutter
 
-
-flutter:
-  uses-material-design: true
-
+flutter: 
   assets: 
     - assets/images/
-
-  fonts:
+  fonts: 
     - family: opensans
-      fonts:
+      fonts: 
         - asset: assets/fonts/OpenSans-Light.ttf
           weight: 300
         - asset: assets/fonts/OpenSans-LightItalic.ttf
-          weight: 300
           style: italic
+          weight: 300
         - asset: assets/fonts/OpenSans-Regular.ttf
           weight: 400
         - asset: assets/fonts/OpenSans-LightItalic.ttf
-          weight: 400
           style: italic
+          weight: 400
         - asset: assets/fonts/OpenSans-Medium.ttf
           weight: 500
         - asset: assets/fonts/OpenSans-MediumItalic.ttf
-          weight: 500
           style: italic
+          weight: 500
         - asset: assets/fonts/OpenSans-SemiBold.ttf
           weight: 600
         - asset: assets/fonts/OpenSans-SemiBoldItalic.ttf
-          weight: 600
           style: italic
+          weight: 600
         - asset: assets/fonts//OpenSans-Bold.ttf
           weight: 700
         - asset: assets/fonts/OpenSans-BoldItalic.ttf
-          weight: 700
           style: italic
+          weight: 700
         - asset: assets/fonts/OpenSans-ExtraBold.ttf
           weight: 800
         - asset: assets/fonts/OpenSans-BoldItalic.ttf
-          weight: 800
           style: italic
-
-# flutter: 
-#   uses-material-design: true
-#   assets: 
-#     - assets/images/
-#   fonts: 
-#     - family: opensans
-#       fonts: 
-#         - asset: assets/fonts/OpenSans-Light.ttf
-# weight: 300
-#         - asset: assets/fonts/OpenSans-LightItalic.ttf
-# style: italic
-# weight: 300
-#         - asset: assets/fonts/OpenSans-Regular.ttf
-# weight: 400
-#         - asset: assets/fonts/OpenSans-LightItalic.ttf
-# style: italic
-# weight: 400
-#         - asset: assets/fonts/OpenSans-Medium.ttf
-# weight: 500
-#         - asset: assets/fonts/OpenSans-MediumItalic.ttf
-# style: italic
-# weight: 500
-#         - asset: assets/fonts/OpenSans-SemiBold.ttf
-# weight: 600
-#         - asset: assets/fonts/OpenSans-SemiBoldItalic.ttf
-# style: italic
-# weight: 600
-#         - asset: assets/fonts/OpenSans-Bold.ttf
-# weight: 700
-#         - asset: assets/fonts/OpenSans-BoldItalic.ttf
-# style: italic
-# weight: 700
-#         - asset: assets/fonts/OpenSans-ExtraBold.ttf
-# weight: 800
-#         - asset: assets/fonts/OpenSans-BoldItalic.ttf
-# style: italic
-# weight: 800
-  
+          weight: 800
+  uses-material-design: true
 
