--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,6 +51,13 @@ android {
             storeFile file('mykey.jks')
             storePassword 'ashwani'
         }
+
+        release {
+            keyAlias "androiddebugkey"
+            keyPassword 'ashwani'
+            storeFile file('mykey.jks')
+            storePassword 'ashwani'
+        }
     }
 
     buildTypes {
@@ -58,6 +65,12 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
+        }
+
+        release {
+            // TODO: Add your own signing config for the release build.
+            // Signing with the debug keys for now, so `flutter run --release` works.
+            signingConfig signingConfigs.release
         }
     }
 }
